fix submit button spacing

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -516,7 +516,7 @@ html {
         }
         input[type=submit] {
             height: 3rem;
-            margin-top: 1.25rem;
+            /* margin-top: 1.25rem; */
         }
     
         input {
@@ -677,5 +677,10 @@ html {
             line-height: 3rem;
             margin: 0;
             padding: 0;
+        }
+
+        input[type=submit] {
+            margin-top: 0;
+            margin-bottom: 2rem;
         }
     }
